--- a/TCP_Client_MultiThread/CMakeLists.txt
+++ b/TCP_Client_MultiThread/CMakeLists.txt
@@ -26,6 +26,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(TCP_Client_Multi
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        cert.qrc
 
     )
 # Define target properties for Android with Qt 6 as:
